--- a/scss/components/pageGrey/_logo.scss
+++ b/scss/components/pageGrey/_logo.scss
@@ -1,5 +1,5 @@
 .logo {
-  position: absolute;
+  position: fixed;
   z-index: 2;
   left: 48px;
   bottom: 60px;
